# AdventOfCode

./: .gitignore  README.md
2018/Day1/: 01_chronal_calibration.rb  02_chronal_calibration.rb  day1  day1.rs
2018/Day10/: stars_align.rb
2018/Day11/: 01_chronal_charge.rb  02_chronal_charge.rb
2018/Day12/: soln.hs
2018/Day13/: soln.hs
2018/Day2/: 01_inventory_management.rb  02_inventory_management.rb  day2  day2.rs
2018/Day3/: 01_slices.rb  02_slices.rb  day3  day3.rs
2018/Day4/: 01_repose_record.rb  02_repose_record.rb  day4  day4.rs
2018/Day5/: .solargraph.yml  01_alchemical_reduction.rb  02_alchemical_reduction.rb
2018/Day6/: 01_chronal_coords.rb  02_chronal_coords.rb
2018/Day7/: 01_sum_of_parts.rb  02_sum_of_parts.rb
2018/Day8/: 01_memory.rb  (+1 more)
2022/: aoc2022.cabal
2022/app/: Day1.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day18.hs  Day2.hs  Day20.hs  Day21.hs  Day23.hs  Day24.hs  Day25.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Day7.hs  Day8.hs  Day9.hs  Main.hs
Day1/: 01_chronal_calibration.rb  02_chronal_calibration.rb  02_chronal_calibration_optimised.rb
Day10/: stars_align.rb
Day11/: 01_chronal_charge.rb  02_chronal_charge.rb
Day2/: 01_inventory_management.rb  02_inventory_management.rb
Day3/: 01_slices.rb  02_slices.rb
Day4/: 01_repose_record.rb  02_repose_record.rb
Day5/: 01_alchemical_reduction.rb  02_alchemical_reduction.rb
Day6/: 01_chronal_coords.rb  02_chronal_coords.rb
Day7/: 01_sum_of_parts.rb  02_sum_of_parts.rb
Day8/: 01_memory.rb  02_memory.rb
Day9/: 01_marble_mania.rb  02_marble_mania.rb
(+3 files in other folders)
