cabal-version:      2.4
name:               aoc2022
version:            0.1.0.0

synopsis: Advent of Code solutions for 2022.

author: RedTechKnight

extra-source-files: CHANGELOG.md

executable aoc2022
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules: Day1
        ,Day2
	    ,Day3
      ,Day4
      ,Day5
      ,Day6
      ,Day7
      ,Day8
      ,Day9
      ,Day10
    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.3.0
    		          ,mtl == 2.2.2
                    , bytestring == 0.11.3.1
                    , containers == 0.6.5.1
                    , parsec == 3.1.15.0
                      ,text == 1.2.5.0
                      ,vector == 0.13.0.0
    hs-source-dirs:   app
    default-language: Haskell2010
